argocd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arbetsprov-app
  namespace: digg-arbetsprov-prod
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: arbetsprov-app  
  template:
    metadata:
      labels:
        app: arbetsprov-app  
    spec:
      containers:
      - name: arbetsprov-app
        image: arbetsprov.registry.se/arbetsprov-app:0.0.1
        resources:
          requests:
            memory: "20Mi"
            cpu: "20m"
          limits:
            memory: "50Mi"
            cpu: "50m"
