argocd/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arbetsprov-app-service
spec:
  selector:
    app: arbetsprov-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
