argocd/base/route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arbetsprov-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
  - host: arbetsprov.testapp.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: arbetsprov-app-service
            port:
              number: 8080
